--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="0.3630359927698366 0.3630359927698366 0.3630359927698366"
+                    scale="3 3 3"
                     gps-entity-place="latitude: 1.3541549401887882; longitude: 103.68369807489218;"
                 ></a-entity>
 
