--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="3 3 3"
-                    gps-entity-place="latitude: 1.3541549401887882; longitude: 103.68369807489218;"
+                    gps-entity-place="latitude: 1.354188; longitude: 103.683687;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
