--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
                     id="animated-asset"
                     src="assets/asset.gltf"
                 ></a-asset-item>
+                <a-asset-item
+                    id="animated-asset1"
+                    src="assets/asset1.gltf"
+                ></a-asset-item>
             </a-assets>
 
                 <a-entity
@@ -29,6 +33,14 @@
                     gltf-model="#animated-asset"
                     scale="10 10 10"
                     gps-entity-place="latitude: 1.354188; longitude: 103.683687;"
+                ></a-entity>
+
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset1"
+                    scale="100 100 100"
+                    gps-entity-place="latitude: 1.348566; longitude: 103.679112;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
