--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset1"
                     scale="100 100 100"
-                    gps-entity-place="latitude: 1.348463; longitude: 103.678602;"
+                    gps-entity-place="latitude: 1.3481338820506366; longitude: 103.678549323231;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
