--- a/index.html
+++ b/index.html
@@ -32,8 +32,9 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="10 10 10"
-                    gps-entity-place="latitude: 1.348316; longitude: 103.678131;"
+                    gps-entity-place="latitude: 1.3508316; longitude: 103.680131;"
                 ></a-entity>
+
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
