--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset1"
                     scale="10 10 10"
-                    gps-entity-place="latitude: 1.3481338820506366; longitude: 103.678549323231;"
+                    gps-entity-place="latitude: 1.355352; longitude: 103.6830771;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
