--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="100 100 100"
-                    gps-entity-place="latitude: 1.28433; longitude: 103.78961;"
+                    gps-entity-place="latitude: 1.28433123; longitude: 103.78961;"
                 ></a-entity>
 
                <a-entity
@@ -48,7 +48,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="100 100 100"
-                    gps-entity-place="latitude: 1.28437; longitude: 103.786;"
+                    gps-entity-place="latitude: 1.28437123; longitude: 103.786123;"
                 ></a-entity>
                 
                 <a-entity
@@ -56,7 +56,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="100 100 100"
-                    gps-entity-place="latitude: 1.29354; longitude: 103.78586;"
+                    gps-entity-place="latitude: 1.29354123; longitude: 103.78586123;"
                 ></a-entity>
             
                 <a-entity
@@ -72,7 +72,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset1"
                     scale="10 10 10"
-                    gps-entity-place="latitude: 1.355352; longitude: 103.6830771;"
+                    gps-entity-place="latitude: 1.35535223; longitude: 103.6830771;"
                 ></a-entity>
 
                 <a-entity
@@ -80,7 +80,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
                     scale="10 10 10"
-                    gps-entity-place="latitude: 1.279388; longitude: 103.825143;"
+                    gps-entity-place="latitude: 1.27938823; longitude: 103.825143;"
                 ></a-entity>
 
                 <a-entity
@@ -88,7 +88,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
                     scale="10 10 10"
-                    gps-entity-place="latitude: 1.281817; longitude: 103.820780;"
+                    gps-entity-place="latitude: 1.28181723; longitude: 103.820780;"
                 ></a-entity>
 
                  <a-entity
