--- a/index.html
+++ b/index.html
@@ -33,6 +33,10 @@
                     id="animated-asset3"
                     src="assets/asset3.gltf"
                 ></a-asset-item>
+                <a-asset-item
+                    id="animated-asset4"
+                    src="assets/asset4.gltf"
+                ></a-asset-item>
             </a-assets>
 
                 <a-entity
@@ -81,6 +85,14 @@
                     gltf-model="#animated-asset3"
                     scale="0.5 0.5 0.5"
                     gps-entity-place="latitude: 1.276365; longitude: 103.905005;"
+                ></a-entity>
+
+                 <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset4"
+                    scale="5 5 5"
+                    gps-entity-place="latitude: 1.289279; longitude: 103.8041615;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
