--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset3"
+                    gltf-model="#animated-asset"
                     scale="7 7 7"
                     gps-entity-place="latitude: 1.276365; longitude: 103.905005;"
                 ></a-entity>
@@ -90,7 +90,7 @@
                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset4"
+                    gltf-model="#animated-asset3"
                     scale="50 50 50"
                     gps-entity-place="latitude: 1.289279; longitude: 103.8041615;"
                 ></a-entity>
