--- a/index.html
+++ b/index.html
@@ -78,15 +78,13 @@
                     scale="10000 10000 10000"
                     gps-entity-place="latitude: 1.289279; longitude: 103.804161;"
                 ></a-entity>
-
-                 <a-entity
+                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="20 20 20"
-                    gps-entity-place="latitude: 1.317111; longitude: 103.813031;"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.329279; longitude: 103.8041615;"
                 ></a-entity>
-
                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
