--- a/index.html
+++ b/index.html
@@ -78,19 +78,21 @@
                     scale="10 10 10"
                     gps-entity-place="latitude: 1.270279; longitude: 103.804161;"
                 ></a-entity>
+
                   <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
                     scale="20 20 20"
-                    gps-entity-place="latitude: 1.299279; longitude: 103.8041615;"
+                    gps-entity-place="latitude: 1.299279; longitude: 103.880599;"
                 ></a-entity>
+
                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset3"
                     scale="20 20 20"
-                    gps-entity-place="latitude: 1.289279; longitude: 103.8041615;"
+                    gps-entity-place="latitude: 1.287875; longitude: 103.8041615;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
