--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 
     <body style="margin: 0; overflow: hidden;">
         <a-scene
+            vr-mode-ui="enabled: false"
+            embedded
+            arjs="sourceType: webcam; videoTexture: true; debugUIEnabled: false;"
             renderer="logarithmicDepthBuffer: true;"
             embedded
             loading-screen="enabled: false;"
@@ -84,7 +87,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
                     scale="20 20 20"
-                    gps-entity-place="latitude: 1.299279; longitude: 103.880599;"
+                    gps-entity-place="latitude: 1.329279; longitude: 103.8041615;"
                 ></a-entity>
 
                  <a-entity
