--- a/index.html
+++ b/index.html
@@ -82,15 +82,15 @@
                   <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset4"
+                    gltf-model="#animated-asset3"
                     scale="20 20 20"
-                    gps-entity-place="latitude: 1.329279; longitude: 103.8041615;"
+                    gps-entity-place="latitude: 1.274931; longitude: 103.809010;"
                 ></a-entity>
 
                  <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
-                    gltf-model="#animated-asset3"
+                    gltf-model="#animated-asset4"
                     scale="20 20 20"
                     gps-entity-place="latitude: 1.287875; longitude: 103.8041615;"
                 ></a-entity>
