--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="7 7 7"
+                    scale="15 15 15"
                     gps-entity-place="latitude: 1.28433123; longitude: 103.78961;"
                 ></a-entity>
 
@@ -51,7 +51,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="7 7 7"
+                    scale="15 15 15"
                     gps-entity-place="latitude: 1.28437123; longitude: 103.786123;"
                 ></a-entity>
                 
@@ -59,8 +59,8 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
-                    scale="7 7 7"
-                    gps-entity-place="latitude: 1.29354123; longitude: 103.78586123;"
+                    scale="15 15 15"
+                    gps-entity-place="latitude: ; longitude: 103.784658;"
                 ></a-entity>
 
                 <a-entity
@@ -83,7 +83,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset3"
-                    scale="20 20 20"
+                    scale="30 30 30"
                     gps-entity-place="latitude: 1.274931; longitude: 103.809010;"
                 ></a-entity>
 
@@ -91,7 +91,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="20 20 20"
+                    scale="5 5 5"
                     gps-entity-place="latitude: 1.287875; longitude: 103.8041615;"
                 ></a-entity>
 
