--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
-                    scale="10 10 10"
+                    scale="50 50 50"
                     gps-entity-place="latitude: 1.288034; longitude: 103.795952;"
                 ></a-entity>
 
@@ -83,8 +83,8 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="15 15 15"
-                    gps-entity-place="latitude: 1.287875; longitude: 103.8041615;"
+                    scale="10 10 10"
+                    gps-entity-place="latitude: 1,285773; longitude: 103.801827;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
