--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset"
                     scale="15 15 15"
-                    gps-entity-place="latitude: ; longitude: 103.784658;"
+                    gps-entity-place="latitude: 1,281139; longitude: 103.785250;"
                 ></a-entity>
 
                 <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
-                    scale="50 50 50"
+                    scale="100 100 100"
                     gps-entity-place="latitude: 1.288034; longitude: 103.795952;"
                 ></a-entity>
 
@@ -83,8 +83,8 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="10 10 10"
-                    gps-entity-place="latitude: 1,285773; longitude: 103.801827;"
+                    scale="12 12 12"
+                    gps-entity-place="latitude: 1.287875; longitude: 103.8041615;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
