--- a/index.html
+++ b/index.html
@@ -71,6 +71,22 @@
                     gps-entity-place="latitude: 1.288034; longitude: 103.795952;"
                 ></a-entity>
 
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.287787; longitude: 103.796041;"
+                ></a-entity>
+
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.288979; longitude: 103.794028;"
+                ></a-entity>
+
                   <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
