--- a/index.html
+++ b/index.html
@@ -87,6 +87,14 @@
                     gps-entity-place="latitude: 1.288979; longitude: 103.794028;"
                 ></a-entity>
 
+                <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.287596; longitude: 103.796157;"
+                ></a-entity>
+
                   <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
@@ -99,8 +107,8 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="5 5 5"
-                    gps-entity-place="latitude: 1.287234; longitude: 103.800678;"
+                    scale="100 100 100"
+                    gps-entity-place="latitude: 1.284617; longitude: 103.801075;"
                 ></a-entity>
 
             <a-camera gps-camera rotation-reader></a-camera>
