--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
-                    gps-entity-place="latitude: 1.288034; longitude: 103.795952;"
+                    position="0 0 -200"
+                    gps-entity-place="latitude: 1.288763; longitude: 103.793999;"
                 ></a-entity>
 
                 <a-entity
@@ -72,7 +73,7 @@
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
-                    gps-entity-place="latitude: 1.287787; longitude: 103.796041;"
+                    gps-entity-place="latitude: 1.288561; longitude: 103.794779;"
                 ></a-entity>
 
                 <a-entity
@@ -81,6 +82,14 @@
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
                     gps-entity-place="latitude: 1.288979; longitude: 103.794028;"
+                ></a-entity>
+
+                  <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.287596; longitude: 103.796157;"
                 ></a-entity>
 
                   <a-entity
