--- a/index.html
+++ b/index.html
@@ -102,12 +102,7 @@
                     gps-entity-place="latitude: 1.282511; longitude: 103.799516;"
                 ></a-entity>
 
-            <a-camera id='camera1'
-            look-controls-enabled='false'
-            arjs-look-controls='smoothingFactor: 0.1'
-            gps-camera='gpsMinDistance: 5' rotation-reader
-            > </a-camera>
-        </a-scene>
+            <a-camera gps-camera rotation-reader></a-camera>
         </a-scene>
     </body>
 </html>
