--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
                     gps-entity-place="latitude: 1.288302; longitude: 103.795491;"
-                    position="0 -100 0"
+                    position="0 -60 0"
                 ></a-entity>
 
                 <a-entity
@@ -74,7 +74,7 @@
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
                     gps-entity-place="latitude: 1.288561; longitude: 103.794779;"
-                    position="0 -100 0"
+                    position="0 -60 0"
                 ></a-entity>
 
                 <a-entity
@@ -83,14 +83,23 @@
                     gltf-model="#animated-asset2"
                     scale="200 200 200"
                     gps-entity-place="latitude: 1.288979; longitude: 103.794028;"
-                    position="0 -100 0"
+                    position="0 -60 0"
+                ></a-entity>
+
+                  <a-entity
+                    look-at="[gps-camera]"
+                    animation-mixer="loop: repeat"
+                    gltf-model="#animated-asset2"
+                    scale="200 200 200"
+                    gps-entity-place="latitude: 1.287596; longitude: 103.796157;"
+                    position="0 -60 0"
                 ></a-entity>
 
                   <a-entity
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset3"
-                    scale="50 50 50"
+                    scale="30 30 30"
                     gps-entity-place="latitude: 1.274931; longitude: 103.809010;"
                 ></a-entity>
 
@@ -98,7 +107,7 @@
                     look-at="[gps-camera]"
                     animation-mixer="loop: repeat"
                     gltf-model="#animated-asset4"
-                    scale="150 150 150"
+                    scale="100 100 100"
                     gps-entity-place="latitude: 1.282511; longitude: 103.799516;"
                 ></a-entity>
             <a-camera gps-camera rotation-reader></a-camera>
