--- a/index.html
+++ b/index.html
@@ -102,7 +102,8 @@
                     gps-entity-place="latitude: 1.282511; longitude: 103.799516;"
                 ></a-entity>
 
-            <a-camera gps-camera rotation-reader></a-camera>
+            <a-camera gps-camera="simulateLatitude: 1.280422; simulateLongitude: 103.793904;"
+                    rotation-reader far=900000></a-camera>
         </a-scene>
     </body>
 </html>
