--- a/index.html
+++ b/index.html
@@ -104,6 +104,8 @@
 
             <a-camera gps-camera="simulateLatitude: 1.280422; simulateLongitude: 103.793904;"
                     rotation-reader far=900000></a-camera>
+
+                    WASTECODEa-camera gps-camera rotation-readerWASTECODEWASTECODE/a-cameraWASTECODE
         </a-scene>
     </body>
 </html>
